# hintman

./: .gitignore  .travis.yml  CHANGELOG.md  Procfile  README.md  cabal.project  hintman-local-install.sh  hintman.cabal  stack.yaml
app/: Main.hs
src/: Hintman.hs  Prelude.hs
src/Hintman/: App.hs  Cli.hs  Comment.hs  Config.hs  Diff.hs  Download.hs  HLint.hs  Hint.hs  Installation.hs  Server.hs  Webhook.hs
src/Hintman/App/: Env.hs  Error.hs  Monad.hs
src/Hintman/Core/: Delta.hs  Hint.hs  Key.hs  PR.hs  PrInfo.hs  Review.hs  Token.hs
src/Hintman/Effect/: TokenStorage.hs
src/Hintman/GitHub/: Auth.hs
src/Hintman/Hint/: HLint.hs  NoNewlineAtFileEnd.hs  Position.hs  TrailingNewline.hs  TrailingNewlines.hs  TrailingSpaces.hs
src/Hintman/Server/: Auth.hs
src/Hintman/Suggestion/: Aggregation.hs  Core.hs  TrailingNewline.hs  TrailingSpaces.hs
test/: Spec.hs
test/Test/: Assert.hs  Config.hs  Data.hs  HLint.hs  Hint.hs  Suggestion.hs  TrailingSpaces.hs
test/Test/Hint/: HLint.hs  NoNewlineAtFileEnd.hs  TrailingNewlines.hs  TrailingSpaces.hs
