cabal-version:       2.0
name:                hintman
version:             0.0.0
synopsis:            GitHub application to suggest hints
description:         GitHub application to suggest hints
homepage:            https://github.com/kowainik/hintman
bug-reports:         https://github.com/kowainik/hintman/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018-2019 Kowainik
category:            GitHub, Webhook
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/hintman.git

library
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Hintman
                         Hintman.App
                           Hintman.App.Env
                           Hintman.App.Monad
                         Hintman.Cli
                         Hintman.Config
                         Hintman.GitHub.Auth
                         Hintman.Server
                             Hintman.Server.Auth
                         Hintman.Suggestion.Core
                         Hintman.Suggestion.Aggregation
                         Hintman.Suggestion.TrailingNewline
                         Hintman.Suggestion.TrailingSpaces

  build-depends:       base-noprelude ^>= 4.12
                     , containers
                     , optparse-applicative ^>= 0.14.3
                     , jwt ^>= 0.7.2
                     , relude ^>= 0.4.0
                     , bytestring ^>= 0.10.8.2
                     , servant ^>= 0.15
                     , servant-server ^>= 0.15
                     , text ^>= 1.2.3
                     , tomland ^>= 1.0.0
                     , time >= 1.8 && < 1.10
                     , transformers ^>= 0.5.5.0
                     , wai ^>= 3.2
                     , warp ^>= 3.2

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

executable hintman
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude
                     , hintman
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite hintman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Suggestion
  main-is:             Spec.hs

  build-depends:       base-noprelude
                     , hedgehog ^>= 0.6
                     , hintman
                     , hspec ^>= 2.6.1
                     , relude
                     , text ^>= 1.2.3

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns
