cabal-version:       2.4
name:                hintman
version:             0.0.0.0
synopsis:            GitHub application to suggest hints
description:         GitHub application to suggest hints
homepage:            https://github.com/kowainik/hintman
bug-reports:         https://github.com/kowainik/hintman/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2019 Kowainik
category:            GitHub, Webhook
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/hintman.git

common common-options
  build-depends:       base-noprelude ^>= 4.12
                     , relude ^>= 0.5.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       InstanceSigs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Hintman
                         Hintman.App
                           Hintman.App.Env
                           Hintman.App.Monad
                         Hintman.Cli
                         Hintman.Config
                         Hintman.GitHub.Auth
                         Hintman.Suggestion.Core
                         Hintman.Suggestion.Aggregation
                         Hintman.Suggestion.TrailingNewline
                         Hintman.Suggestion.TrailingSpaces
                         Hintman.Webhook

  build-depends:       aeson
                     , bytestring ^>= 0.10.8.2
                     , containers
                     , jwt ^>= 0.7.2
                     , github-webhooks ^>= 0.10.1
                     , optparse-applicative ^>= 0.14.3
                     , servant ^>= 0.15
                     , servant-github-webhook ^>= 0.4.1.0
                     , servant-server ^>= 0.15
                     , text ^>= 1.2.3
                     , time >= 1.8 && < 1.10
                     , tomland ^>= 1.1.0.1
                     , transformers ^>= 0.5.5.0
                     , wai ^>= 3.2
                     , warp ^>= 3.2

executable hintman
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       hintman

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

test-suite hintman-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Config
                       Test.Suggestion
  main-is:             Spec.hs

  build-depends:       hedgehog ^>= 0.6
                     , hintman
                     , hspec ^>= 2.6.1
                     , silently
                     , text ^>= 1.2.3
                     , temporary

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
