cabal-version:       2.4
name:                hintman
version:             0.0.0.0
synopsis:            GitHub application to suggest hints
description:         GitHub application to suggest hints
homepage:            https://github.com/kowainik/hintman
bug-reports:         https://github.com/kowainik/hintman/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2019 Kowainik
category:            GitHub, Webhook
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/hintman.git

common common-options
  build-depends:       base-noprelude ^>= 4.12
                     , relude ^>= 0.6.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveAnyClass
                       DeriveGeneric
                       DerivingStrategies
                       FlexibleContexts
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       TypeSynonymInstances
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prelude
                       Hintman
                         Hintman.App
                           Hintman.App.Env
                           Hintman.App.Error
                           Hintman.App.Monad

                         Hintman.Core.Hint
                         Hintman.Core.Key
                         Hintman.Core.PrInfo
                         Hintman.Core.Review
                         Hintman.Core.Token

                         Hintman.Effect.TokenStorage

                         Hintman.Cli
                         Hintman.Comment
                         Hintman.Diff
                         Hintman.Download
                         Hintman.Installation
                         Hintman.Webhook

                         Hintman.Hint
                           Hintman.Hint.HLint
                           Hintman.Hint.NoNewlineAtFileEnd
                           Hintman.Hint.Position
                           Hintman.Hint.TrailingNewlines
                           Hintman.Hint.TrailingSpaces

  build-depends:       aeson ^>= 1.4.4.0
                     , bytestring ^>= 0.10.8.2
                     , co-log ^>= 0.3.0.0
                     , containers
                     , cryptonite ^>= 0.25
                     , diff-parse ^>= 0.2.1
                     , directory ^>= 1.3.3.0
                     , filepath ^>= 1.4
                     , github ^>= 0.22
                     , github-webhooks ^>= 0.11.0
                     , haskell-src-exts
                     , hlint ^>= 2.2.2
                     , http-client ^>= 0.6.4
                     , http-client-tls ^>= 0.3.5
                     , http-types
                     , jwt ^>= 0.10
                     , mtl ^>= 2.2.2
                     , optparse-applicative ^>= 0.15.0.0
                     , servant ^>= 0.16
                     , servant-client ^>= 0.16
                     , servant-github-webhook ^>= 0.4.1.0
                     , servant-server ^>= 0.16
                     , text ^>= 1.2.3
                     , time >= 1.8 && < 1.10
                     , transformers ^>= 0.5.5.0
                     , unliftio ^>= 0.2
                     , unordered-containers
                     , vector ^>= 0.12
                     , wai ^>= 3.2
                     , warp ^>= 3.2
                     , x509 ^>= 1.7.5
                     , x509-store ^>= 1.6.7

executable hintman
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hintman
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hintman-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Data
                       Test.Hint
                         Test.Hint.HLint
                         Test.Hint.TrailingNewlines
                         Test.Hint.TrailingSpaces
                         Test.Hint.NoNewlineAtFileEnd

  build-depends:       co-log
                     , hintman
                     , hspec ^>= 2.7.1
                     , text ^>= 1.2.3

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
